--- a/css/style.css
+++ b/css/style.css
@@ -684,7 +684,7 @@ header .content-header{
 .experience{
     width: 50%;
     height: 70vh ;
-    background-color : aqua ;
+    background-color : rgb(32, 165, 165) ;
     margin-top: 15%;
     display: flex; 
     flex-direction: column ; 
