--- a/css/style.css
+++ b/css/style.css
@@ -666,7 +666,7 @@ header .content-header{
     display: flex;  
     flex-direction: column;
     justify-content: center;
-    height: 23vh;
+    min-height: 23vh;
     width: 40%;
     position: relative;
     color : rgb(119, 116, 116) ;
@@ -719,7 +719,7 @@ header .content-header{
     display: flex;  
     flex-direction: column;
     justify-content: center;
-    height: 23vh;
+    min-height: 23vh;
     width: 40%;
     position: relative;
     color : rgb(119, 116, 116) ;
@@ -1021,9 +1021,64 @@ header .content-header{
 }
 .stone{
     transition: all 0.2s ; 
+    
 }
+
 .stone:hover{
     transform: translateX(5%) ; 
     background-color : rgb(244, 250, 250); 
     box-shadow: none ;
+}
+@media ( max-width : 1500px ){
+
+    /* make nav on the top  */
+    
+    .wrapper-nav-bar{
+        
+        display: flex ; 
+        height: 6vh;
+        width: 100%;
+        
+    }
+    .nav-profile{
+        flex-direction: row ;
+        margin : 0 ; 
+        height: 100%;
+      
+    }
+    .nav-profile img{
+        transform: scale(0.3) ;
+    }
+    .nav-profile h7{
+        display: none ;
+    }
+    .nav{
+        
+        flex-direction: row ; 
+        height: 100%;
+        width: 50%;
+        
+        justify-content: space-around ;
+        margin: 0 auto;
+    }
+    .nav li{
+        border : none ;
+        height: 3% !important;
+        border-radius: 20px ;
+        position: relative ; 
+    }
+    .nav li::before{
+
+         /* height: 1%;  */
+        width: 70%; 
+        top: 95%; 
+        left: 15%; 
+        height: 2px;
+    }
+    .nav li a{
+        position: absolute;
+        top: 15% ; 
+        left: 25%;       
+    }
+
 }
